<resources>
    <string name="app_name">Pu_Smart_Campus_Micro-Positioning_Service</string>
    <string name="app_SchoolName">靜宜大學</string>
    <string name="app_Title">智慧校園微定位服務</string>

    <string name="text_Account">賬號</string>
    <string name="text_Password">密碼</string>
    <string name="text_RetypePassword">重新輸入</string>
    <string name="text_hello">您好: </string>
    <string name="text_information">景點説明</string>
    <string name="text_peopleNo">人數: </string>

    <string name="toggle_RememberMe">記住我</string>

    <string name="title_Main">主頁面</string>
    <string name="title_monitor">監控畫面</string>
    <string name="title_guide_spot">詳細景點</string>
    <string name="title_guide">景點導覽</string>
    <string name="title_check">人流查詢</string>

    <!--Activity Check-->
    <string name="check_detail">詳細顯示</string>
    <string name="check_chart">圖表顯示</string>

    <!--Activity safety-->
    <string name="title_safety">安全通道</string>
    <string name="safety_Start">安全導覽</string>
    <string name="safety_Activate">監控中</string>

    <!--Button Name-->
    <string name="btn_Login">登入</string>
    <string name="btn_Clear">清除</string>
    <string name="btn_SignOut">登出</string>
    <string name="btn_Guest">游客登入</string>
    <string name="btn_Cancel">取消</string>
    <string name="btn_Conform">確定</string>
    <string name="btn_findMore">查看更多</string>

    <!--Alert Dialog-->
    <string name="okay">確認</string>
    <string name="cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>